fix mobile header too short...

--- a/source/style/_partial/mobile.styl
+++ b/source/style/_partial/mobile.styl
@@ -15,7 +15,7 @@ else
         // filter blur(10px)
         z-index 50
         position fixed
-        top -200px
+        top -300px
         left 0
         right 0
         // height (@top*-1)
